deploy/kyverno/policies/disallow-host-path.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-path
  annotations:
    policies.kyverno.io/title: Disallow hostPath
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod,Volume
spec:
  background: false
  webhookTimeoutSeconds: 30
  rules:
    - name: host-path
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - demo
      validate:
        failureAction: Enforce
        message: "HostPath volumes are forbidden."
        pattern:
          spec:
            "=(volumes)":
              - X(hostPath): "null"
