deploy/kyverno/policies/disallow-privileged-containers.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/title: Disallow Privileged Containers
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
spec:
  background: false
  webhookTimeoutSeconds: 30
  rules:
    - name: privileged-containers
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - app
      validate:
        failureAction: Enforce
        message: "Privileged mode is disallowed."
        pattern:
          spec:
            "=(ephemeralContainers)":
              - "=(securityContext)":
                  "=(privileged)": false
            "=(initContainers)":
              - "=(securityContext)":
                  "=(privileged)": false
            containers:
              - "=(securityContext)":
                  "=(privileged)": false
